# CPP-3D-Engine

./: CMakeLists.txt  CREDITS.txt  README.md
framework/include/: debug.hpp  framebuffer.hpp  mesh.hpp  program.hpp  rotate_camera.hpp  texture.hpp  texture_group.hpp  utilities.hpp
framework/src/: framebuffer.cpp  mesh.cpp  program.cpp  rotate_camera.cpp  texture.cpp  texture_group.cpp  utilities.cpp
maps/: map01.map  map_debug.map  original_amnesia_map.map
objects/: cottage.mtl  cube.inl  plane.inl  sphere.inl  teapot.inl
objects/dungeonbase/: wall.msh
shaders/: draw_lights.frag  draw_lights.vert  draw_object.frag  draw_object.vert  draw_object_textured.frag  draw_object_textured.vert  postprocess.frag  postprocess.vert  ui.frag  ui.vert
src/: CMakeLists.txt  application.cpp  application.hpp  main.cpp
src/Game/: area.cpp  area.hpp  camera.cpp  camera.hpp  entity.cpp  entity.hpp  game.cpp  game.hpp  hitbox.cpp  hitbox.hpp  light.cpp  light.hpp  map.cpp  map.hpp  object.cpp  object.hpp  player.cpp  player.hpp  ui.cpp  ui.hpp
textures/dungeonbase/: dungeonbase.dds  dungeonbase_spec.dds
